--- a/Index.html
+++ b/Index.html
@@ -4,53 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar sesión</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        .login-container {
-            max-width: 400px;
-            margin: 100px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .login-container img {
-            width: 100%;
-            margin-bottom: 20px;
-        }
-
-        .login-container label {
-            display: block;
-            margin-bottom: 8px;
-        }
-
-        .login-container input {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 16px;
-            box-sizing: border-box;
-        }
-
-        .login-container button {
-            background-color: #4caf50;
-            color: #fff;
-            padding: 10px;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="./src/Style/Index.css">
 </head>
 <body>
     <div class="login-container">
-        <img src="ruta/de/tu/imagen.jpg" alt="Logo" />
+        <img src="./src/assets/img/PATITAS FELICES Logo.png" alt="Logo" />
         <form action="procesar_login.php" method="post">
             <label for="username">Usuario:</label>
             <input type="text" id="username" name="username" required>
@@ -60,6 +18,8 @@
 
             <button type="submit">Iniciar sesión</button>
         </form>
+
+        <p class="signup-link">¿Aun no tienes cuenta? <a href="./src/pages/Registro.html">Crea una</a></p>
     </div>
 </body>
 </html>
