--- a/Login.html
+++ b/Login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="./Img/PATITAS FELICES Logo.png">
     <title>Iniciar sesión</title>
     <link rel="stylesheet" href="./Style/Login.css">
 </head>
