--- a/Pages/Productos.html
+++ b/Pages/Productos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="../Img/PATITAS FELICES Logo.png">
     <link rel="stylesheet" href="../Style/Productos.css">
     <title>Productos</title>
 </head>
@@ -15,8 +16,8 @@
         <div class="Link">
             <a href="../Index.html" class="enlaces">Inicio</a>
             <a href="../Pages/Productos.html" class="enlaces">Productos</a>
-            <a href="" class="enlaces">Adopcion</a>
-            <a href="" class="enlaces">Nosotros</a>
+            <a href="#" class="enlaces">Adopcion</a>
+            <a href="../Pages/Nosotros.html" class="enlaces">Nosotros</a>
         </div>
     </header>
     <section class="body">
@@ -24,81 +25,81 @@
             <h3>Alimentos</h3>
             <div class="cards">
                 <img class="imgCards" src="../Img/Alimento(perro).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Dog Food</b></p>
+                <p class="pCards"><b>Descripcion:</b> Es un alimento especial para perros adultos hogareños.</p>
+                <p class="pCards"><b>$ 150</b></p>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Alimento(gato).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Cat Chow</b></p>
+                <p class="pCards"><b>Descripcion:</b>Este producto ofrece <b>Hidro Plus+</b> y <b>Defense Plus+</b></p>
+                <p class="pCards"><b>$ 80</b></p>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Alimento(peces).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Fosanic</b></p>
+                <p class="pCards"><b>Descripcion:</b> Con los mejores nutrientes para tu pez</p>
+                <p class="pCards"><b>$ 120</b></p>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Alimento(conejo).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Plebbit/s</b></p>
+                <p class="pCards"><b>Descripcion:</b> Alimento organico para una mejor digestion</p>
+                <p class="pCards"><b>$ 100</b></p>
             </div>
         </section>
         <section class="producto">
             <h3>Productos de moda</h3>
             <div class="cards">
                 <img class="imgCards" src="../Img/Traje(Moño).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Moño rosa</b></p>
+                <p class="pCards"><b>Descripcion:</b> Moño rosa coquette </p>
+                <p class="pCards"><b>$ 60</b></p>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Traje(batman).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Traje Batman</b></p>
+                <p class="pCards"><b>Descripcion:</b> Traje de batman para tu Gallo</p>
+                <p class="pCards"><b>$ 200</b></p>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Traje(navidad).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Traje navideño</b></p>
+                <p class="pCards"><b>Descripcion:</b> Traje de navidad para el concentido de la casa</p>
+                <p class="pCards"><b>$ 350</b></p>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Traje(sanValentin).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Traje love</b></p>
+                <p class="pCards"><b>Descripcion:</b> Canasta y traje de san valentin para que tu gato sea el mas lindo de la colonia </p>
+                <p class="pCards"><b>$ 400</b></p>
             </div>
         </section>
         <section class="producto">
             <h3>Productos de entrenamiento</h3>
             <div class="cards">
                 <img class="imgCards" src="../Img/Entrenamiento(Alfombra).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Alfombra</b></p>
+                <p class="pCards"><b>Descripcion:</b> Alfombra entrenadora para evitar accidentes</p>
+                <p class="pCards"><b>$ 70</b></p>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Entreno(hueso).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Hueso</b></p>
+                <p class="pCards"><b>Descripcion:</b> Hueso para mantener sus dientes firmes </p>
+                <p class="pCards"><b>$ 120</b></p>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Entrenamiento(Collar).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Collar</b></p>
+                <p class="pCards"><b>Descripcion:</b> Collares resistentes a jalones extremos </p>
+                <p class="pCards"><b>$ 200</b></p>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Entrenamiento(Pelota).jpeg" alt="">
-                <p class="pCards">NProducto</p>
-                <p class="pCards">Descripcion</p>
-                <p class="pCards">Precio</p>
+                <p class="pCards"><b>Pelotas</b></p>
+                <p class="pCards"><b>Descripcion:</b> Pelotas para jugar con el mejor amigo de el hombre</p>
+                <p class="pCards"><b>$ 150</b></p>
             </div>
         </section>
     </section>
