--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="./Img/PATITAS FELICES Logo.png">
     <link rel="stylesheet" href="./Style/Index.css">
     <title>Inicio</title>
 </head>
@@ -15,8 +16,8 @@
         <div class="Link">
             <a href="./Index.html" class="enlaces">Inicio</a>
             <a href="./Pages/Productos.html" class="enlaces">Productos</a>
-            <a href="" class="enlaces">Adopcion</a>
-            <a href="" class="enlaces">Nosotros</a>
+            <a href="#" class="enlaces">Adopcion</a>
+            <a href="./Pages/Nosotros.html" class="enlaces">Nosotros</a>
         </div>
     </header>
     <section class="body">
