--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,8 @@
     <header class="header">
         <section class="Alinear">
             <div class="LogoDiv">
-                <img width="110vh" src="./Img/veterinaria2.png" alt="" >
-                <img width="200vh" height="50vh" src="./Img/PATITAS FELICES Nombre2.png" alt="">
+                <img width="20%" src="./Img/veterinaria2.png" alt="" >
+                <img width="60%" height="50vh" src="./Img/PATITAS FELICES Nombre2.png" alt="">
             </div>
             <div class="Link">
                 <a href="./Index.html" class="enlaces">Inicio</a>
