--- a/Pages/Adopcion.html
+++ b/Pages/Adopcion.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../Img/PATITAS FELICES Logo.png">
     <link rel="stylesheet" href="../Style/Adopcion.css">
-    <title>Adopcion</title>
+    <title>Adopción </title>
 </head>
-<body class="body">
+<body class="Cuerpo">
     <header class="header">
         <section class="Alinear">
             <div class="LogoDiv">
@@ -22,42 +22,85 @@
             </div>
         </section>
     </header>
-    <section class="Adopcion">
-            <div class="CardAdopcion">
-                <img class="CardImg" src="../Img/perro1.jpeg" alt="">
+    <section class="body">
+        <section class="producto">
+            <div class="cards">
+                <img class="imgCards" src="../Img/perro1.jpeg" alt="">
+                <p class="pCards"><b>Perro</b></p>
+                <p class="pCards"><b>Nombre:</b>Max</p>
+                <p class="pCards"><b>Edad:</b>2 año</p>
             </div>
-            <div class="CardAdopcion">
-                <img class="CardImg" src="../Img/gato1.jpeg" alt="">
-
+            <div class="cards">
+                <img class="imgCards" src="../Img/gato1.jpeg" alt="">
+                <p class="pCards"><b>Gato</b></p>
+                <p class="pCards"><b>Nombre:</b>Domino</p>
+                <p class="pCards"><b>Edad:</b>1 año</p>
             </div>
-            <div class="CardAdopcion">
-                <img class="CardImg" src="../Img/pollito.jpeg" alt="">
-
+            <div class="cards">
+                <img class="imgCards" src="../Img/hamster.jpg" alt="">
+                <p class="pCards"><b>Hamster</b></p>
+                <p class="pCards"><b>Nombre:</b>Pepinillo</p>
+                <p class="pCards"><b>Edad:</b>2 meses</p>
             </div>
-            <div class="CardAdopcion">
-                <img class="CardImg" src="../Img/gato2.jpeg" alt="">
-
+            <div class="cards">
+                <img class="imgCards" src="../Img/pollito.jpeg" alt="">
+                <p class="pCards"><b>Pato</b></p>
+                <p class="pCards"><b>Nombre:</b>Roberto</p>
+                <p class="pCards"><b>Edad: 1 mes</b></p>
             </div>
-            <div class="CardAdopcion">
-                <img class="CardImg" src="../Img/perro2.jpeg" alt="">
-
+        </section>
+        <section class="producto">
+            <div class="cards">
+                <img class="imgCards" src="../Img/gato2.jpeg" alt="">
+                <p class="pCards"><b>Nutria</b></p>
+                <p class="pCards"><b>Nombre:</b>Merlina</p>
+                <p class="pCards"><b>Edad:</b>3 años</p>
             </div>
-            <div class="CardAdopcion">
-                <img class="CardImg" src="../Img/conejo.jpeg" alt="">
-
+            <div class="cards">
+                <img class="imgCards" src="../Img/perro2.jpeg" alt="">
+                <p class="pCards"><b>Cocodrilo</b></p>
+                <p class="pCards"><b>Nombre:</b>McLovin</p>
+                <p class="pCards"><b>Edad:</b> 4 años</p>
             </div>
-            <div class="CardAdopcion">
-                <img class="CardImg" src="../Img/perro3.jpeg" alt="">
-
+            <div class="cards">
+                <img class="imgCards" src="../Img/conejo.jpeg" alt="">
+                <p class="pCards"><b>Pez payaso</b></p>
+                <p class="pCards"><b>Nombre:</b> Nemo</p>
+                <p class="pCards"><b>Edad: 6 meses </b> </p>
             </div>
-            <div class="CardAdopcion">
-                <img class="CardImg" src="../Img/gato3.jpeg" alt="">
-
+            <div class="cards">
+                <img class="imgCards" src="../Img/hamster.jpeg" alt="">
+                <p class="pCards"><b>Gallina</b></p>
+                <p class="pCards"><b>Nombre:</b>Patroclia</p>
+                <p class="pCards"><b>Edad: 9 meses </b></p>
             </div>
-            <div class="CardAdopcion">
-                <img class="CardImg" src="../Img/hamster.jpeg" alt="">
-
+        </section>
+        <section class="producto">
+            <div class="cards">
+                <img class="imgCards" src="../Img/perro3.jpeg" alt="">
+                <p class="pCards"><b>Conejo</b></p>
+                <p class="pCards"><b>Nombre:</b>Rabich</p>
+                <p class="pCards"><b>Edad:</b> 1 año </p>
             </div>
+            <div class="cards">
+                <img class="imgCards" src="../Img/gato3.jpeg" alt="">
+                <p class="pCards"><b>Hurón</b></p>
+                <p class="pCards"><b>Nombre:</b>Pedro</p>
+                <p class="pCards"><b>Edad:</b>2 años</p>
+            </div>
+            <div class="cards">
+                <img class="imgCards" src="../Img/perro1.webp" alt="">
+                <p class="pCards"><b>Serpiente</b></p>
+                <p class="pCards"><b>Nombre: Ginny</b></p>
+                <p class="pCards"><b>Edad:</b>2 años</p>
+            </div>
+            <div class="cards">
+                <img class="imgCards" src="../Img/gato1.jpg" alt="">
+                <p class="pCards"><b>Ajolote</b></p>
+                <p class="pCards"><b>Nombre:</b>Pelonchas</p>
+                <p class="pCards"><b>Edad:</b> 8 meses </p>
+            </div>
+        </section>
     </section>
     <footer>
         <section class="Alinear">
