--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <section class="Alinear">
             <div class="LogoDiv">
-                <img width="20%" src="./Img/veterinaria2.png" alt="" >
+                <img width="30%" src="./Img/veterinaria2.png" alt="" >
                 <img width="60%" height="50vh" src="./Img/PATITAS FELICES Nombre2.png" alt="">
             </div>
             <div class="Link">
@@ -41,22 +41,22 @@
                 </div>
             </article>
             <aside class="servicios">
-                <h3 style="text-align: center;">Servicios</h3>
+                <h3 style="text-align: center; padding: 7px;">Servicios</h3>
                 <div class="serviciosDiv">
-                    <p>Servicios clínicos</p>
                     <img width="60%" src="./Img/clinica.png" alt="">
+                    <p style="padding: 7px;">Servicios clínicos</p>
                 </div>
                 <div class="serviciosDiv">
-                    <p>Suministro de medicamentos, vacunas y otros productos</p>
                     <img width="60%" src="./Img/medicamento.png" alt="">
+                    <p style="padding: 7px;">Suministro de medicamentos, vacunas y otros productos</p>
                 </div>
                 <div class="serviciosDiv">
-                    <p>Prevención de enfermedades y suministración de vacunas</p>
                     <img width="60%" src="./Img/vacuna.png" alt="">
+                    <p style="padding: 7px;">Prevención de enfermedades y suministración de vacunas</p>
                 </div>
                 <div class="serviciosDiv">
-                    <p>Peluquería e higiene canina</p>
                     <img width="60%" src="./Img/perro.png" alt="">
+                    <p style="padding: 7px;">Peluquería e higiene canina</p>
                 </div>
             </aside>
         </section>
@@ -76,12 +76,12 @@
     </section>
     <footer>
         <section class="Alinear">
+            <img width="5%" height="auto" src="./Img/veterinaria2.png" alt="" >
             <ul>
                 <li><img width="20px" src="./Img/telefono.png" alt=""> <a href="#">Whatsap</a></li>
                 <li><img width="20px" src="./Img/gorjeo (2).png" alt=""> <a href="#">X</a></li>
                 <li><img width="20px" src="./Img/instagram (4).png" alt=""><a href="#">Instagram</a></li>
             </ul>
-            <img width="90vh" height="95vh" src="./Img/veterinaria2.png" alt="" >
         </section>
     </footer>
 </body>
