--- a/Pages/Adopcion.html
+++ b/Pages/Adopcion.html
@@ -11,8 +11,8 @@
     <header class="header">
         <section class="Alinear">
             <div class="LogoDiv">
-                <img width="110vh" src="../Img/veterinaria2.png" alt="" >
-                <img width="200vh" height="50vh" src="../Img/PATITAS FELICES Nombre2.png" alt="">
+                <img width="30%" src="../Img/veterinaria2.png" alt="" >
+                <img width="60%" height="50vh" src="../Img/PATITAS FELICES Nombre2.png" alt="">
             </div>
             <div class="Link">
                 <a href="../Index.html" class="enlaces">Inicio</a>
@@ -26,90 +26,114 @@
         <section class="producto">
             <div class="cards">
                 <img class="imgCards" src="../Img/perro1.jpeg" alt="">
-                <p class="pCards"><b>Perro</b></p>
-                <p class="pCards"><b>Nombre:</b>Max</p>
-                <p class="pCards"><b>Edad:</b>2 año</p>
+                <div class="texCards">
+                    <p class="pCards"><b>Perro</b></p>
+                    <p class="pCards"><b>Nombre:</b>Max</p>
+                    <p class="pCards"><b>Edad:</b>2 año</p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/gato1.jpeg" alt="">
-                <p class="pCards"><b>Gato</b></p>
-                <p class="pCards"><b>Nombre:</b>Domino</p>
-                <p class="pCards"><b>Edad:</b>1 año</p>
+                <div class="texCards">
+                    <p class="pCards"><b>Gato</b></p>
+                    <p class="pCards"><b>Nombre:</b>Domino</p>
+                    <p class="pCards"><b>Edad:</b>1 año</p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/hamster.jpg" alt="">
-                <p class="pCards"><b>Hamster</b></p>
-                <p class="pCards"><b>Nombre:</b>Pepinillo</p>
-                <p class="pCards"><b>Edad:</b>2 meses</p>
+                <div class="texCards">
+                    <p class="pCards"><b>Hamster</b></p>
+                    <p class="pCards"><b>Nombre:</b>Pepinillo</p>
+                    <p class="pCards"><b>Edad:</b>2 meses</p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/pollito.jpeg" alt="">
-                <p class="pCards"><b>Pato</b></p>
-                <p class="pCards"><b>Nombre:</b>Roberto</p>
-                <p class="pCards"><b>Edad: 1 mes</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Pato</b></p>
+                    <p class="pCards"><b>Nombre:</b>Roberto</p>
+                    <p class="pCards"><b>Edad: 1 mes</b></p>
+                </div>
             </div>
         </section>
         <section class="producto">
             <div class="cards">
                 <img class="imgCards" src="../Img/gato2.jpeg" alt="">
-                <p class="pCards"><b>Nutria</b></p>
-                <p class="pCards"><b>Nombre:</b>Merlina</p>
-                <p class="pCards"><b>Edad:</b>3 años</p>
+                <div class="texCards">
+                    <p class="pCards"><b>Nutria</b></p>
+                    <p class="pCards"><b>Nombre:</b>Merlina</p>
+                    <p class="pCards"><b>Edad:</b>3 años</p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/perro2.jpeg" alt="">
-                <p class="pCards"><b>Cocodrilo</b></p>
-                <p class="pCards"><b>Nombre:</b>McLovin</p>
-                <p class="pCards"><b>Edad:</b> 4 años</p>
+                <div class="texCards">
+                    <p class="pCards"><b>Cocodrilo</b></p>
+                    <p class="pCards"><b>Nombre:</b>McLovin</p>
+                    <p class="pCards"><b>Edad:</b> 4 años</p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/conejo.jpeg" alt="">
-                <p class="pCards"><b>Pez payaso</b></p>
-                <p class="pCards"><b>Nombre:</b> Nemo</p>
-                <p class="pCards"><b>Edad: 6 meses </b> </p>
+                <div class="texCards">
+                    <p class="pCards"><b>Pez payaso</b></p>
+                    <p class="pCards"><b>Nombre:</b> Nemo</p>
+                    <p class="pCards"><b>Edad: 6 meses </b> </p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/hamster.jpeg" alt="">
-                <p class="pCards"><b>Gallina</b></p>
-                <p class="pCards"><b>Nombre:</b>Patroclia</p>
-                <p class="pCards"><b>Edad: 9 meses </b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Gallina</b></p>
+                    <p class="pCards"><b>Nombre:</b>Patroclia</p>
+                    <p class="pCards"><b>Edad: 9 meses </b></p>
+                </div>
             </div>
         </section>
         <section class="producto">
             <div class="cards">
                 <img class="imgCards" src="../Img/perro3.jpeg" alt="">
-                <p class="pCards"><b>Conejo</b></p>
-                <p class="pCards"><b>Nombre:</b>Rabich</p>
-                <p class="pCards"><b>Edad:</b> 1 año </p>
+                <div class="texCards">
+                    <p class="pCards"><b>Conejo</b></p>
+                    <p class="pCards"><b>Nombre:</b>Rabich</p>
+                    <p class="pCards"><b>Edad:</b> 1 año </p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/gato3.jpeg" alt="">
-                <p class="pCards"><b>Hurón</b></p>
-                <p class="pCards"><b>Nombre:</b>Pedro</p>
-                <p class="pCards"><b>Edad:</b>2 años</p>
+                <div class="texCards">
+                    <p class="pCards"><b>Hurón</b></p>
+                    <p class="pCards"><b>Nombre:</b>Pedro</p>
+                    <p class="pCards"><b>Edad:</b>2 años</p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/perro1.webp" alt="">
-                <p class="pCards"><b>Serpiente</b></p>
-                <p class="pCards"><b>Nombre: Ginny</b></p>
-                <p class="pCards"><b>Edad:</b>2 años</p>
+                <div class="texCards">
+                    <p class="pCards"><b>Serpiente</b></p>
+                    <p class="pCards"><b>Nombre: Ginny</b></p>
+                    <p class="pCards"><b>Edad:</b>2 años</p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/gato1.jpg" alt="">
-                <p class="pCards"><b>Ajolote</b></p>
-                <p class="pCards"><b>Nombre:</b>Pelonchas</p>
-                <p class="pCards"><b>Edad:</b> 8 meses </p>
+                <div class="texCards">
+                    <p class="pCards"><b>Ajolote</b></p>
+                    <p class="pCards"><b>Nombre:</b>Pelonchas</p>
+                    <p class="pCards"><b>Edad:</b> 8 meses </p>
+                </div>
             </div>
         </section>
     </section>
     <footer>
         <section class="Alinear">
+            <img width="5%" src="../Img/veterinaria2.png" alt="" >
             <ul>
                 <li><img width="20px" src="../Img/telefono.png" alt=""> <a href="#">Whatsap</a></li>
                 <li><img width="20px" src="../Img/gorjeo (2).png" alt=""> <a href="#">X</a></li>
                 <li><img width="20px" src="../Img/instagram (4).png" alt=""><a href="#">Instagram</a></li>
             </ul>
-            <img width="90vh" height="95vh" src="../Img/veterinaria2.png" alt="" >
         </section>
     </footer>
 </body>
