--- a/Pages/Nosotros.html
+++ b/Pages/Nosotros.html
@@ -11,8 +11,8 @@
     <header class="header">
         <section class="Alinear">
             <div class="LogoDiv">
-                <img width="110vh" src="../Img/veterinaria2.png" alt="" >
-                <img width="200vh" height="50vh" src="../Img/PATITAS FELICES Nombre2.png" alt="">
+                <img width="30%" src="../Img/veterinaria2.png" alt="" >
+                <img width="60%" height="50vh" src="../Img/PATITAS FELICES Nombre2.png" alt="">
             </div>
             <div class="Link">
                 <a href="../Index.html" class="enlaces">Inicio</a>
@@ -63,12 +63,12 @@
     </section>
     <footer>
         <section class="Alinear">
-            <ul>
+            <img width="5%" src="../Img/veterinaria2.png" alt="" >
+            <ul class="ul">
                 <li><img width="20px" src="../Img/telefono.png" alt=""> <a href="#">Whatsap</a></li>
                 <li><img width="20px" src="../Img/gorjeo (2).png" alt=""> <a href="#">X</a></li>
                 <li><img width="20px" src="../Img/instagram (4).png" alt=""><a href="#">Instagram</a></li>
             </ul>
-            <img width="90vh" height="95vh" src="../Img/veterinaria2.png" alt="" >
         </section>
     </footer>
 </body>
