--- a/Pages/Productos.html
+++ b/Pages/Productos.html
@@ -11,8 +11,8 @@
     <header class="header">
         <section class="Alinear">
             <div class="LogoDiv">
-                <img width="110vh" src="../Img/veterinaria2.png" alt="" >
-                <img width="200vh" height="50vh" src="../Img/PATITAS FELICES Nombre2.png" alt="">
+                <img width="30%" src="../Img/veterinaria2.png" alt="" >
+                <img width="60%" height="50vh" src="../Img/PATITAS FELICES Nombre2.png" alt="">
             </div>
             <div class="Link">
                 <a href="../Index.html" class="enlaces">Inicio</a>
@@ -27,92 +27,116 @@
             <h3>Alimentos</h3>
             <div class="cards">
                 <img class="imgCards" src="../Img/Alimento(perro).jpeg" alt="">
-                <p class="pCards"><b>Dog Food</b></p>
-                <p class="pCards"><b>Descripcion:</b> Es un alimento especial para perros adultos hogareños.</p>
-                <p class="pCards"><b>$ 150</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Dog Food</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Es un alimento especial para perros adultos hogareños.</p>
+                    <p class="pCards"><b>$ 150</b></p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Alimento(gato).jpeg" alt="">
-                <p class="pCards"><b>Cat Chow</b></p>
-                <p class="pCards"><b>Descripcion:</b>Este producto ofrece <b>Hidro Plus+</b> y <b>Defense Plus+</b></p>
-                <p class="pCards"><b>$ 80</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Cat Chow</b></p>
+                    <p class="pCards"><b>Descripcion:</b>Este producto ofrece <b>Hidro Plus+</b> y <b>Defense Plus+</b></p>
+                    <p class="pCards"><b>$ 80</b></p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Alimento(peces).jpeg" alt="">
-                <p class="pCards"><b>Fosanic</b></p>
-                <p class="pCards"><b>Descripcion:</b> Con los mejores nutrientes para tu pez</p>
-                <p class="pCards"><b>$ 120</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Fosanic</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Con los mejores nutrientes para tu pez</p>
+                    <p class="pCards"><b>$ 120</b></p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Alimento(conejo).jpeg" alt="">
-                <p class="pCards"><b>Plebbit/s</b></p>
-                <p class="pCards"><b>Descripcion:</b> Alimento organico para una mejor digestion</p>
-                <p class="pCards"><b>$ 100</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Plebbit/s</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Alimento organico para una mejor digestion</p>
+                    <p class="pCards"><b>$ 100</b></p>
+                </div>
             </div>
         </section>
         <section class="producto">
             <h3>Productos de moda</h3>
             <div class="cards">
                 <img class="imgCards" src="../Img/Traje(Moño).jpeg" alt="">
-                <p class="pCards"><b>Moño rosa</b></p>
-                <p class="pCards"><b>Descripcion:</b> Moño rosa coquette </p>
-                <p class="pCards"><b>$ 60</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Moño rosa</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Moño rosa coquette </p>
+                    <p class="pCards"><b>$ 60</b></p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Traje(batman).jpeg" alt="">
-                <p class="pCards"><b>Traje Batman</b></p>
-                <p class="pCards"><b>Descripcion:</b> Traje de batman para tu Gallo</p>
-                <p class="pCards"><b>$ 200</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Traje Batman</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Traje de batman para tu Gallo</p>
+                    <p class="pCards"><b>$ 200</b></p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Traje(navidad).jpeg" alt="">
-                <p class="pCards"><b>Traje navideño</b></p>
-                <p class="pCards"><b>Descripcion:</b> Traje de navidad para el concentido de la casa</p>
-                <p class="pCards"><b>$ 350</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Traje navideño</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Traje de navidad para el concentido de la casa</p>
+                    <p class="pCards"><b>$ 350</b></p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Traje(sanValentin).jpeg" alt="">
-                <p class="pCards"><b>Traje love</b></p>
-                <p class="pCards"><b>Descripcion:</b> Canasta y traje de san valentin para que tu gato sea el mas lindo de la colonia </p>
-                <p class="pCards"><b>$ 400</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Traje love</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Canasta y traje de san valentin para que tu gato sea el mas lindo de la colonia </p>
+                    <p class="pCards"><b>$ 400</b></p>
+                </div>
             </div>
         </section>
         <section class="producto">
             <h3>Productos de entrenamiento</h3>
             <div class="cards">
                 <img class="imgCards" src="../Img/Entrenamiento(Alfombra).jpeg" alt="">
-                <p class="pCards"><b>Alfombra</b></p>
-                <p class="pCards"><b>Descripcion:</b> Alfombra entrenadora para evitar accidentes</p>
-                <p class="pCards"><b>$ 70</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Alfombra</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Alfombra entrenadora para evitar accidentes</p>
+                    <p class="pCards"><b>$ 70</b></p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Entreno(hueso).jpeg" alt="">
-                <p class="pCards"><b>Hueso</b></p>
-                <p class="pCards"><b>Descripcion:</b> Hueso para mantener sus dientes firmes </p>
-                <p class="pCards"><b>$ 120</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Hueso</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Hueso para mantener sus dientes firmes </p>
+                    <p class="pCards"><b>$ 120</b></p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Entrenamiento(Collar).jpeg" alt="">
-                <p class="pCards"><b>Collar</b></p>
-                <p class="pCards"><b>Descripcion:</b> Collares resistentes a jalones extremos </p>
-                <p class="pCards"><b>$ 200</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Collar</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Collares resistentes a jalones extremos </p>
+                    <p class="pCards"><b>$ 200</b></p>
+                </div>
             </div>
             <div class="cards">
                 <img class="imgCards" src="../Img/Entrenamiento(Pelota).jpeg" alt="">
-                <p class="pCards"><b>Pelotas</b></p>
-                <p class="pCards"><b>Descripcion:</b> Pelotas para jugar con el mejor amigo de el hombre</p>
-                <p class="pCards"><b>$ 150</b></p>
+                <div class="texCards">
+                    <p class="pCards"><b>Pelotas</b></p>
+                    <p class="pCards"><b>Descripcion:</b> Pelotas para jugar con el mejor amigo de el hombre</p>
+                    <p class="pCards"><b>$ 150</b></p>
+                </div>
             </div>
         </section>
     </section>
     <footer>
         <section class="Alinear">
+            <img width="5%" src="../Img/veterinaria2.png" alt="" >
             <ul>
                 <li><img width="20px" src="../Img/telefono.png" alt=""> <a href="#">Whatsap</a></li>
                 <li><img width="20px" src="../Img/gorjeo (2).png" alt=""> <a href="#">X</a></li>
                 <li><img width="20px" src="../Img/instagram (4).png" alt=""><a href="#">Instagram</a></li>
             </ul>
-            <img width="90vh" height="95vh" src="../Img/veterinaria2.png" alt="" >
         </section>
     </footer>
 </body>
