--- a/Pages/Adopcion.html
+++ b/Pages/Adopcion.html
@@ -24,82 +24,96 @@
     </header>
     <section class="body">
         <section class="producto">
-            <div class="cards">
-                <img class="imgCards" src="../Img/perro1.jpeg" alt="">
-                <p class="pCards"><b>Perro</b></p>
-                <p class="pCards"><b>Nombre:</b>Max</p>
-                <p class="pCards"><b>Edad:</b>2 año</p>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/gato1.jpeg" alt="">
-                <p class="pCards"><b>Gato</b></p>
-                <p class="pCards"><b>Nombre:</b>Domino</p>
-                <p class="pCards"><b>Edad:</b>1 año</p>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/hamster.jpg" alt="">
-                <p class="pCards"><b>Hamster</b></p>
-                <p class="pCards"><b>Nombre:</b>Pepinillo</p>
-                <p class="pCards"><b>Edad:</b>2 meses</p>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/pollito.jpeg" alt="">
-                <p class="pCards"><b>Pato</b></p>
-                <p class="pCards"><b>Nombre:</b>Roberto</p>
-                <p class="pCards"><b>Edad: 1 mes</b></p>
-            </div>
-        </section>
-        <section class="producto">
-            <div class="cards">
-                <img class="imgCards" src="../Img/gato2.jpeg" alt="">
-                <p class="pCards"><b>Nutria</b></p>
-                <p class="pCards"><b>Nombre:</b>Merlina</p>
-                <p class="pCards"><b>Edad:</b>3 años</p>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/perro2.jpeg" alt="">
-                <p class="pCards"><b>Cocodrilo</b></p>
-                <p class="pCards"><b>Nombre:</b>McLovin</p>
-                <p class="pCards"><b>Edad:</b> 4 años</p>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/conejo.jpeg" alt="">
-                <p class="pCards"><b>Pez payaso</b></p>
-                <p class="pCards"><b>Nombre:</b> Nemo</p>
-                <p class="pCards"><b>Edad: 6 meses </b> </p>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/hamster.jpeg" alt="">
-                <p class="pCards"><b>Gallina</b></p>
-                <p class="pCards"><b>Nombre:</b>Patroclia</p>
-                <p class="pCards"><b>Edad: 9 meses </b></p>
-            </div>
-        </section>
-        <section class="producto">
-            <div class="cards">
-                <img class="imgCards" src="../Img/perro3.jpeg" alt="">
-                <p class="pCards"><b>Conejo</b></p>
-                <p class="pCards"><b>Nombre:</b>Rabich</p>
-                <p class="pCards"><b>Edad:</b> 1 año </p>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/gato3.jpeg" alt="">
-                <p class="pCards"><b>Hurón</b></p>
-                <p class="pCards"><b>Nombre:</b>Pedro</p>
-                <p class="pCards"><b>Edad:</b>2 años</p>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/perro1.webp" alt="">
-                <p class="pCards"><b>Serpiente</b></p>
-                <p class="pCards"><b>Nombre: Ginny</b></p>
-                <p class="pCards"><b>Edad:</b>2 años</p>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/gato1.jpg" alt="">
-                <p class="pCards"><b>Ajolote</b></p>
-                <p class="pCards"><b>Nombre:</b>Pelonchas</p>
-                <p class="pCards"><b>Edad:</b> 8 meses </p>
-            </div>
+            <div class="card">
+                <img src="../Img/perro1.webp" alt="Card Image">
+                <div class="card-body">
+                  <div class="card-title">Card Title</div>
+                  <div class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                  </div>
+                  <button class="btn-primary">Adoptame</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../Img/gato1.jpg" alt="Card Image">
+                <div class="card-body">
+                  <div class="card-title">Card Title</div>
+                  <div class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                  </div>
+                  <button class="btn-primary">Adoptame</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../Img/hamster.jpg" alt="Card Image">
+                <div class="card-body">
+                  <div class="card-title">Card Title</div>
+                  <div class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                  </div>
+                  <button class="btn-primary">Adoptame</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../Img/husky-t.jpg.webp" alt="Card Image">
+                <div class="card-body">
+                  <div class="card-title">Card Title</div>
+                  <div class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                  </div>
+                  <button class="btn-primary">Adoptame</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../Img/ajolote._unam.jpg" alt="Card Image">
+                <div class="card-body">
+                  <div class="card-title">Card Title</div>
+                  <div class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                  </div>
+                  <button class="btn-primary">Adoptame</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../Img/Misterio-peces.webp" alt="Card Image">
+                <div class="card-body">
+                  <div class="card-title">Card Title</div>
+                  <div class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                  </div>
+                  <button class="btn-primary">Adoptame</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../Img/huron.webp" alt="Card Image">
+                <div class="card-body">
+                  <div class="card-title">Card Title</div>
+                  <div class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                  </div>
+                  <button class="btn-primary">Adoptame</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../Img/conejo.jpg" alt="Card Image">
+                <div class="card-body">
+                  <div class="card-title">Card Title</div>
+                  <div class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                  </div>
+                  <button class="btn-primary">Adoptame</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../Img/iguana.jpeg" alt="Card Image">
+                <div class="card-body">
+                  <div class="card-title">Card Title</div>
+                  <div class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                  </div>
+                  <button class="btn-primary">Adoptame</button>
+                </div>
+              </div>
         </section>
     </section>
     <footer>
