--- a/Pages/Nosotros.html
+++ b/Pages/Nosotros.html
@@ -26,7 +26,7 @@
         <h2 style="width: 100%;">Trayectoria</h2>
         <div class="listaTrayectoria">
             <ul>
-                <li><b>Inicio (2010):</b>: “Patitas Felices” comienza en un pequeño local en Suchiapa, Chiapas, México. A pesar de su tamaño, la clínica se destaca por su personal amable y altamente capacitado. </li>
+                <li><b>Inicio (2010):</b> “Patitas Felices” comienza en un pequeño local en Suchiapa, Chiapas, México. A pesar de su tamaño, la clínica se destaca por su personal amable y altamente capacitado. </li>
                 <li><b>Expanción de servicios (2012)</b> “Patitas Felices” introduce servicios de aseo y alojamiento para mascotas, convirtiéndose en un centro integral para el cuidado de las mascotas.</li>
                 <li><b>Reconocimiento Local (2015): </b>  Gracias a su excelente servicio al cliente y cuidado de las mascotas, “Patitas Felices” recibe el premio al “Mejor Servicio Veterinario” de la región.</li>
             </ul>
@@ -42,22 +42,22 @@
     <section class="Personal">
         <div class="cardsPersonal">
             <img class="Perfil" src="../Img/Irving.jpeg" alt="">
-            <h3><b>Fundador:</b> Irving Champo</h3>
+            <h3><b>Fundador: Irving Champo</b> </h3>
             <p>Lo que empezo como un sueño Irving Champo logro convertirlo en una realidad y no solo eso...</p>
         </div>
         <div class="cardsPersonal">
             <img class="Perfil" src="../Img/margarita.jpeg" alt="">
-            <h3><b>Doctora:</b> Margarita Olivera</h3>
+            <h3><b>Doctora: Margarita Olivera</b> </h3>
             <p>Especialista en animales pequeños cuenta con la capacidad de calmar hasta los perros mas gruñones</p>
         </div>
         <div class="cardsPersonal">
             <img class="Perfil" src="../Img/didi.jpeg" alt="">
-            <h3><b>Medico cirujano:</b> Didier Mendoza </h3>
+            <h3><b>Medico cirujano: Didier Mendoza</b>  </h3>
             <p>Especialista en cirujias con animales grandes aun que muy bueno tartando animales pequeños</p>
         </div>
         <div class="cardsPersonal">
             <img class="Perfil" src="../Img/betty.jpeg" alt="">
-            <h3><b>Enfermera:</b> Beatriz Hernandez</h3>
+            <h3><b>Enfermera: Beatriz Hernandez</b> </h3>
             <p>Cuenta con una larga experiencia y una gran trayectoria que la respaldan como una de las mejores enfermeras para el cuidado de tu mascota </p>
         </div>
     </section>
