--- a/Pages/Adopcion.html
+++ b/Pages/Adopcion.html
@@ -5,130 +5,122 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../Img/PATITAS FELICES Logo.png">
     <link rel="stylesheet" href="../Style/Adopcion.css">
-    <title>Adopción </title>
+    <title>Adopción</title>
 </head>
 <body class="Cuerpo">
-    <header class="header">
-        <section class="Alinear">
-            <div class="LogoDiv">
-                <img width="30%" src="../Img/veterinaria2.png" alt="" >
-                <img width="60%" height="50vh" src="../Img/PATITAS FELICES Nombre2.png" alt="">
-            </div>
-            <div class="Link">
-                <a href="../Index.html" class="enlaces">Inicio</a>
-                <a href="../Pages/Productos.html" class="enlaces">Productos</a>
-                <a href="../Pages/Adopcion.html" class="enlaces">Adopcion</a>
-                <a href="../Pages/Nosotros.html" class="enlaces">Nosotros</a>
-            </div>
+    <div class="container">
+        <header class="header">
+            <section class="Alinear">
+                <div class="LogoDiv">
+                    <img width="30%" src="../Img/veterinaria2.png" alt="">
+                    <img width="60%" height="50vh" src="../Img/PATITAS FELICES Nombre2.png" alt="">
+                </div>
+                <div class="Link">
+                    <a href="../Index.html" class="enlaces">Inicio</a>
+                    <a href="../Pages/Productos.html" class="enlaces">Productos</a>
+                    <a href="../Pages/Adopcion.html" class="enlaces">Adopcion</a>
+                    <a href="../Pages/Nosotros.html" class="enlaces">Nosotros</a>
+                </div>
+            </section>
+        </header>
+        <section class="body">
+            <section class="producto">
+                <div class="card">
+                    <img src="../Img/perro1.webp" alt="Card Image">
+                    <div class="card-body">
+                      <div class="card-title">Max</div>
+                      <div class="card-text">
+                        Max quiere irse a casa a jugar contigo
+                      </div>
+                      <a href="../Pages/Formulario-adopcion.html" class="btn-primary">Adoptame</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../Img/iguana.jpeg" alt="Card Image">
+                    <div class="card-body">
+                      <div class="card-title">Pedro</div>
+                      <div class="card-text">
+                        Pedro quiere tomar el sol en tu patio
+                      </div>
+                      <a href="../Pages/Formulario-adopcion.html" class="btn-primary">Adoptame</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../Img/husky-t.jpg.webp" alt="Card Image">
+                    <div class="card-body">
+                      <div class="card-title">Nieve</div>
+                      <div class="card-text">
+                        Nieve quiere irse a dormir a tu casa
+                        </div>
+                      <a href="../Pages/Formulario-adopcion.html" class="btn-primary">Adoptame</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../Img/ajolote._unam.jpg" alt="Card Image">
+                    <div class="card-body">
+                      <div class="card-title">Pelonchas</div>
+                      <div class="card-text">
+                        Pelonchas quiere tu amor
+                      </div>
+                      <a href="../Pages/Formulario-adopcion.html" class="btn-primary">Adoptame</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../Img/conejo.jpg" alt="Card Image">
+                    <div class="card-body">
+                      <div class="card-title">Rabit</div>
+                      <div class="card-text">
+                        Quiere saltar en tu patio
+                    </div>
+                      <a href="../Pages/Formulario-adopcion.html" class="btn-primary">Adoptame</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../Img/gato1.jpg" alt="Card Image">
+                    <div class="card-body">
+                      <div class="card-title">Bigotes</div>
+                      <div class="card-text">
+                        Bigotes quiere pelearse con otros gatos en tu techo
+                      </div>
+                      <a href="../Pages/Formulario-adopcion.html" class="btn-primary">Adoptame</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../Img/hamster.jpg" alt="Card Image">
+                    <div class="card-body">
+                      <div class="card-title">Chiquitin</div>
+                      <div class="card-text">
+                        Chiquitin quiere comer
+                    </div>
+                      <a href="../Pages/Formulario-adopcion.html" class="btn-primary">Adoptame</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../Img/huron.webp" alt="Card Image">
+                    <div class="card-body">
+                      <div class="card-title">Patroclio</div>
+                      <div class="card-text">
+                        Patroclio quiere casar contigo
+                    </div>
+                      <a href="../Pages/Formulario-adopcion.html" class="btn-primary">Adoptame</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../Img/Misterio-peces.webp" alt="Card Image">
+                    <div class="card-body">
+                      <div class="card-title">Nemo</div>
+                      <div class="card-text">
+                        Nemo quiere hacer: glu glu
+                    </div>
+                      <a href="../Pages/Formulario-adopcion.html" class="btn-primary">Adoptame</a>
+                    </div>
+                </div>
+            </section>
         </section>
-    </header>
-    <section class="body">
-        <section class="producto">
-            <div class="cards">
-                <img class="imgCards" src="../Img/perro1.jpeg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Perro</b></p>
-                    <p class="pCards"><b>Nombre:</b>Max</p>
-                    <p class="pCards"><b>Edad:</b>2 año</p>
-                </div>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/gato1.jpeg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Gato</b></p>
-                    <p class="pCards"><b>Nombre:</b>Domino</p>
-                    <p class="pCards"><b>Edad:</b>1 año</p>
-                </div>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/hamster.jpg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Hamster</b></p>
-                    <p class="pCards"><b>Nombre:</b>Pepinillo</p>
-                    <p class="pCards"><b>Edad:</b>2 meses</p>
-                </div>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/pollito.jpeg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Pato</b></p>
-                    <p class="pCards"><b>Nombre:</b>Roberto</p>
-                    <p class="pCards"><b>Edad: 1 mes</b></p>
-                </div>
-            </div>
-        </section>
-        <section class="producto">
-            <div class="cards">
-                <img class="imgCards" src="../Img/gato2.jpeg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Nutria</b></p>
-                    <p class="pCards"><b>Nombre:</b>Merlina</p>
-                    <p class="pCards"><b>Edad:</b>3 años</p>
-                </div>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/perro2.jpeg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Cocodrilo</b></p>
-                    <p class="pCards"><b>Nombre:</b>McLovin</p>
-                    <p class="pCards"><b>Edad:</b> 4 años</p>
-                </div>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/conejo.jpeg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Pez payaso</b></p>
-                    <p class="pCards"><b>Nombre:</b> Nemo</p>
-                    <p class="pCards"><b>Edad: 6 meses </b> </p>
-                </div>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/hamster.jpeg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Gallina</b></p>
-                    <p class="pCards"><b>Nombre:</b>Patroclia</p>
-                    <p class="pCards"><b>Edad: 9 meses </b></p>
-                </div>
-            </div>
-        </section>
-        <section class="producto">
-            <div class="cards">
-                <img class="imgCards" src="../Img/perro3.jpeg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Conejo</b></p>
-                    <p class="pCards"><b>Nombre:</b>Rabich</p>
-                    <p class="pCards"><b>Edad:</b> 1 año </p>
-                </div>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/gato3.jpeg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Hurón</b></p>
-                    <p class="pCards"><b>Nombre:</b>Pedro</p>
-                    <p class="pCards"><b>Edad:</b>2 años</p>
-                </div>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/perro1.webp" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Serpiente</b></p>
-                    <p class="pCards"><b>Nombre: Ginny</b></p>
-                    <p class="pCards"><b>Edad:</b>2 años</p>
-                </div>
-            </div>
-            <div class="cards">
-                <img class="imgCards" src="../Img/gato1.jpg" alt="">
-                <div class="texCards">
-                    <p class="pCards"><b>Ajolote</b></p>
-                    <p class="pCards"><b>Nombre:</b>Pelonchas</p>
-                    <p class="pCards"><b>Edad:</b> 8 meses </p>
-                </div>
-            </div>
-        </section>
-    </section>
+    </div>
     <footer>
         <section class="Alinear">
-            <img width="5%" src="../Img/veterinaria2.png" alt="" >
+            <img width="5%" height="auto" src="../Img/veterinaria2.png" alt="" >
             <ul>
                 <li><img width="20px" src="../Img/telefono.png" alt=""> <a href="#">Whatsap</a></li>
                 <li><img width="20px" src="../Img/gorjeo (2).png" alt=""> <a href="#">X</a></li>
