--- a/Pages/Formulario-adopcion.html
+++ b/Pages/Formulario-adopcion.html
@@ -25,7 +25,7 @@
         <section class="body">
             <section class="formulario-adopcion">
                 <h2>Formulario de Adopción</h2>
-                <form action="../Pages/Adopcion.html" method="post">
+                <form action="../Pages/Adopcion.html" method="">
                     <label for="nombre">Nombre completo:</label>
                     <input type="text" id="nombre" name="nombre" required>
 
@@ -37,9 +37,8 @@
 
                     <label for="razon">Razón para adoptar:</label>
                     <textarea id="razon" name="razon" required></textarea>
-
-                    <button type="submit">Enviar Solicitud</button>
-                </form>
+                        <a href="../Pages/Adopcion.html">Enviar solicitud</a>
+                    </form>
             </section>
         </section>
     <footer>
